# fgc-flow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: installation.md  intro.md  myst.yml  quickstart.ipynb
docs/api/: ac_opf.md  dc_opf.md  lindistflow.md  sqlite_export.md  ybus.md
docs/guide/: cli.md  comparison.ipynb  sqlite_export.md  testing.md
docs/mcp/: overview.md  tool_reference.md
docs/solvers/: ac_opf.md  dc_opf.md  lindistflow.md  overview.md  ybus.md
examples/: README.md  compare_plotly_results.py  run_ac_opf_example.py  run_dc_opf_example.py  run_lindistflow_example.py
examples/models/: p5r.json
examples/models/p5r_time_series/: 1bda497a-591b-413d-be76-a0cf62c6c801.arrow  20203332-0cd9-495a-9f18-bbca80dd3873.arrow  3a275dc3-a100-40a2-9411-e00da9d623da.arrow  76417e23-ccf4-4341-86b7-f618d0170df5.arrow  d6d8725d-0a3a-4744-8e10-d5937a0a05d1.arrow
examples/plots/: opf_comparison_plotly.html
src/fgc_flow/: __init__.py  ac_opf.py  cli.py  dc_opf.py  ybus.py
src/fgc_flow/mcp/: __init__.py  server.py
src/gdm_opf/: __init__.py  _utils.py  ac_opf.py  cli.py  dc_opf.py  export_cli.py  lindistflow.py  sqlite_export.py  ybus.py
src/gdm_opf/mcp/: __init__.py  server.py
tests/: test_ac_opf_additional.py  test_cli.py  test_component_specs.py  test_dc_opf.py  test_dc_opf_additional.py  test_export_cli.py  test_export_cli_additional.py  test_gdmloader_integration.py  test_lindistflow.py  test_lindistflow_additional.py  test_mcp_server.py  test_optimization.py  test_sqlite_export.py  test_ybus.py  test_ybus_additional.py
