[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdm-opf"
version = "0.1.0"
description = "Power flow utilities for grid-data-models distribution systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "NLR Distribution Suite" }
]
dependencies = [
  "numpy>=1.24",
  "grid-data-models",
  "typer>=0.9",
  "rich>=13.0",
]

[project.scripts]
gdm-opf = "gdm_opf.cli:main"
gdm-opf-export = "gdm_opf.export_cli:main"
gdm-opf-mcp-server = "gdm_opf.mcp.server:main"

[project.optional-dependencies]
sparse = ["scipy>=1.10"]
optimization = ["scipy>=1.10"]
mcp = ["mcp>=1.0.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
