[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgc-flow"
version = "0.1.0"
description = "Power flow utilities for distribution systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "NLR Distribution Suite" }
]
dependencies = [
  "numpy>=1.24",
  "grid-data-models",
  "typer>=0.9",
  "rich>=13.0",
]

[project.scripts]
fgc-flow = "fgc_flow.cli:main"
fgc-flow-export = "fgc_flow.export_cli:main"
fgc-flow-mcp-server = "fgc_flow.mcp.server:main"

[project.optional-dependencies]
sparse = ["scipy>=1.10"]
optimization = ["scipy>=1.10"]
mcp = ["mcp>=1.0.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
